// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App and EndGame should render the EndGame component if there is a winner 1`] = `
<div
  className="app"
>
  <Route
    exact={true}
    path="/"
    render={[Function]}
  />
  <Route
    path="/questions/"
    render={[Function]}
  />
  <Route
    path="/winner/"
    render={[Function]}
  />
</div>
`;

exports[`App and Form should render the Form component if there are no teams and no questions 1`] = `
<div
  className="app"
>
  <Route
    exact={true}
    path="/"
    render={[Function]}
  />
  0
</div>
`;

exports[`App and loading image should render the loading image if there are teams but no questions 1`] = `
<div
  className="app"
>
  <Route
    exact={true}
    path="/"
    render={[Function]}
  />
  <div
    className="loading-div"
  >
    <img
      alt="loading: three circles"
      className="loading-image"
      src="loadingGIF.gif"
    />
  </div>
</div>
`;

exports[`App should match the snapshot 1`] = `
<div
  className="app"
>
  <Route
    exact={true}
    path="/"
    render={[Function]}
  />
  <Route
    path="/questions/"
    render={[Function]}
  />
</div>
`;
